updated the travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,8 +25,9 @@ env:
 
 # Installs poetry, nox, and nox-poetry
 before_install:
-  - curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python -
+  - curl -sSL https://install.python-poetry.org | python3 -
   - poetry --version
+  # - pip install poetry
   - pip install nox nox-poetry
 
 # Installs all packages needed for tmi in a virtual environment
