--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
 language: python
-# python:
-#   - "3.9"
-#   - "3.10"
+python:
+  - "3.9"
+  - "3.10"
 
+os: linux
 dist: xenial
 
 git:
@@ -25,13 +26,6 @@ cache:
 env:
   # Set Matplotlib backend to Agg (Non-interactive, only writes to files)
   - MPLBACKEND=Agg
-
-matrix:
-  include:
-    - python: '3.9'
-      dist: xenial
-    - python: '3.10'  # Also test docs with latest supported python version
-      dist: xenial
 
 
 # Installs poetry, nox, and nox-poetry
