--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,20 @@
 language: python
 python:
-  - "3.9.10"
-  - "3.10.2"
+  - 3.7
+  - 3.8
+  - 3.9
+  - 3.10
 
+# Ubuntu 20.04 (Focal) LTS
 os: linux
-dist: xenial
+dist: focal
 
 git:
   depth: false
 
 stages:
-  - Quality
-  - Test
-  - Pre-Commit
-  # - Build
-  # - Publish
+  - lint
+  - test
 
 # Set the caches
 cache:
@@ -26,40 +26,27 @@ cache:
 env:
   # Set Matplotlib backend to Agg (Non-interactive, only writes to files)
   - MPLBACKEND=Agg
+  - PARALLELIZE=true
 
-
-# Installs poetry, nox, and nox-poetry
+# Installs poetry and pre-commit
 before_install:
   - curl -sSL https://install.python-poetry.org | python3 -
   - poetry --version
-  - pip install nox nox-poetry coveralls
+  - pip install coveralls
+  - pip install pre-commit
 
 # Installs all packages needed for tmi in a virtual environment
 install:
   - poetry install
+  - pre-commit install-hooks
 
 jobs:
   include:
-    - stage: "Quality - 3.9"
-      python: 3.9
-      name: "Linting, Type Checking, Safety"
-      script: nox --session mypy(python=3.9) typeguard(python=3.9) safety(python=3.9)
-    - stage: "Test - 3.9"
-      name: "Unit Tests"
-      python: 3.9
-      script: nox --session tests(python=3.9)
-    - stage: "Quality - 3.10"
-      python: 3.10
-      name: "Linting, Type Checking, Safety"
-      script: nox --session mypy(python=3.10) typeguard(python=3.10) safety(python=3.10)
-    - stage: "Test - 3.10"
-      name: "Unit Tests"
-      python: 3.10
-      script: nox --session tests(python=3.10)
-    - stage: "Pre-Commit - 3.10"
-      python: 3.10
-      name: "Git Pre-Commit hooks"
-      script: nox --session pre-commit(python=3.10)
+    - stage: lint
+      script:
+        pre-commit run --all-files
+    - stage: test
+        pytest -randomly-seed=42 -randomly-dont-reorganize -cov=tmi src/tmi
 
 after_success:
   - coveralls
