--- a/.travis.yml
+++ b/.travis.yml
@@ -44,7 +44,8 @@ jobs:
     - stage: lint
       script: pre-commit run --all-files
     - stage: test
-        pytest -randomly-seed=42 -randomly-dont-reorganize -cov=tmi src/tmi
+      script: 
+        pytest --randomly-seed=42 --randomly-dont-reorganize --cov --pycodestyle
 
 after_success:
   - coveralls
