--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,7 @@ flake8-bugbear = "^22.1.11"
 darglint = "^1.8.1"
 pytest-randomly = "^3.11.0"
 pylint = "^2.12.2"
+pytest-pycodestyle = "^2.3.0"
 
 
 [build-system]
@@ -64,12 +65,12 @@ show_error_context = true
 ignore_missing_imports = true
 
 [tool.darglint]
-ignore = ["DAR402","DAR103"]
+ignore = ["DAR402", "DAR103"]
 
 ## COVERAGE ##
 
 [tool.coverage.paths]
-source = ["src", "*/site-packages"]
+source = ["src/", "*/site-packages"]
 
 [tool.coverage.run]
 branch = true
@@ -92,7 +93,6 @@ package_depth = 99
 
 [tool.coverage.json]
 output = "coverage.json"
-
 
 ## TESTING ##
 [tool.pytest.ini_options]
