--- a/.travis.yml
+++ b/.travis.yml
@@ -44,8 +44,7 @@ jobs:
     - stage: lint
       script: pre-commit run --all-files
     - stage: test
-      script: 
-        pytest --randomly-seed=42 --randomly-dont-reorganize --cov --pycodestyle
+      script: pytest --randomly-seed=42 --randomly-dont-reorganize --cov --pycodestyle
 
 after_success:
   - coveralls
