--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,6 +11,11 @@ repos:
         name: Check for added large files
         entry: check-added-large-files
         language: system
+      - id: check-poetry
+        name: Checks pyproject.toml
+        entry: check-poetry
+        language: system
+        types: [toml]
       - id: check-toml
         name: Check Toml
         entry: check-toml
