--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,6 +54,15 @@ requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 ## LINTING, FORMATTING and TYPECHECKING ##
+[tool.isort]
+profile = "black"
+line_length = 99
+multi_line_output = 3
+
+[tool.black]
+line-length=99
+target-version=['py38', 'py39', 'py310']
+preview=true
 
 [tool.mypy]
 strict = true
