--- a/.travis.yml
+++ b/.travis.yml
@@ -45,8 +45,7 @@ jobs:
     - stage: lint
       name: "Pre-commit"
       script: pre-commit run --all-files
-    - stage: test
-      script: pytest --randomly-seed=42 --randomly-dont-reorganize --cov --pycodestyle
+    - script: pytest --randomly-seed=42 --randomly-dont-reorganize --cov --pycodestyle
 after_success:
   - coveralls
 
