--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,7 +61,7 @@ multi_line_output = 3
 
 [tool.black]
 line-length=99
-target-version=['py38', 'py39', 'py310']
+target-version=['py39', 'py310']
 preview=true
 
 [tool.mypy]
