--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,13 @@ Changelog = "https://github.com/angelolab/tmi/releases"
 
 ## DEPENDENCIES ##
 
+# Once Poetry version 1.2.0 is released, the dependencies can be further restructured into:
+# [tool.poetry.group.test.dependencies]
+# [tool.poetry.group.dev.dependencies]
+# [tool.poetry.group.docs.dependencies]
+# etc..., we can create as many `groups` as needed.
+
+# Default Dependencies
 [tool.poetry.dependencies]
 python = ">=3.9,<3.11"
 numpy = "^1.22.2"
@@ -25,6 +32,7 @@ xarray = "^2022.3.0"
 matplotlib = "^3.5.1"
 seaborn = "^0.11.2"
 
+# Development Dependencies
 [tool.poetry.dev-dependencies]
 black = "^22.1.0"
 pytest = "^7.0.1"
@@ -111,3 +119,8 @@ filterwarnings = [
     "ignore::PendingDeprecationWarning",
 ]
 norecursedirs = ["tests/utils"]
+
+
+## TOX ##
+# Currently there is no native support. When it is available, it would be best to consolidiate
+# another file (in this case the tox.ini file) into the pyproject.toml 
