--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,19 @@
 [tox]
-skipsdist = true
 envlist = py39, py310
+isolated_build = True
+skipsdist = True
+
+[tox:.package]
+basepython = python3
 
 [pycodestyle]
 count = False
 ignore = E226,E302,E41
 max-line-length = 99
 statistics = True
+
+[testenv]
+whitelist_externals = poetry
+commands = 
+    poetry install
+    poetry run pytest -s -vv --randomly-seed=42 --randomly-dont-reorganize --cov-report= --cov --pycodestyle
