--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,7 @@
 [tox]
-envlist = py39, py310
 isolated_build = True
+envlist = py39, py310
+skip_missing_interpreters = true
 skipsdist = True
 
 [tox:.package]
@@ -16,4 +17,4 @@ statistics = True
 whitelist_externals = poetry
 commands =
     poetry install
-    poetry run pytest -s -vv --randomly-seed=42 --randomly-dont-reorganize --cov-report= --cov --pycodestyle
+    poetry run pytest -s -vv --randomly-seed=42 --randomly-dont-reorganize --cov-report= --cov --pycodestyle tests/
