--- a/tox.ini
+++ b/tox.ini
@@ -13,7 +13,7 @@ ignore = E226,E302,E41
 max-line-length = 99
 statistics = True
 
-[testenv]
-whitelist_externals = poetry
-commands =
-    poetry run pytest -s -vv --randomly-seed=42 --randomly-dont-reorganize --cov-report= --cov --pycodestyle tests/
+; [testenv]
+; whitelist_externals = poetry
+; commands =
+;     poetry run pytest -s -v --randomly-seed=42 --randomly-dont-reorganize --cov-report= --cov --pycodestyle tests/
