--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "tmi"
 version = "0.1.0"
 description = "Toolbox for Multiplexed Imaging. Contains scripts and little tools which are used throughout ark-analysis, mibi-bin-tools, and toffy."
-authors = ["Angelo Lab <a@stanford.edu>"]
+authors = ["Angelo Lab <nfgreen@stanford.edu>"]
 license = "Modified Apache 2.0"
 homepage = "https://github.com/angelolab/tmi"
 repository = "https://github.com/angelolab/tmi"
@@ -18,12 +18,6 @@ Changelog = "https://github.com/angelolab/tmi/releases"
 
 ## DEPENDENCIES ##
 
-# Once Poetry version 1.2.0 is released, the dependencies can be further restructured into:
-# [tool.poetry.group.test.dependencies]
-# [tool.poetry.group.dev.dependencies]
-# [tool.poetry.group.docs.dependencies]
-# etc..., we can create as many `groups` as needed.
-
 # Default Dependencies
 [tool.poetry.dependencies]
 python = ">=3.9,<3.11"
@@ -34,29 +28,25 @@ seaborn = "^0.11.2"
 
 # Development Dependencies
 [tool.poetry.dev-dependencies]
+bandit = "1.7.2"
 black = "^22.1.0"
-pytest = "^7.0.1"
-mypy = "^0.931"
-typeguard = "^2.13.3"
-reorder-python-imports = "^2.7.1"
-pre-commit-hooks = "^4.1.0"
-flake8 = "^4.0.1"
+coveralls = "^3.3.1"
 coverage = { version = "^6.3.2", extras = ["toml"] }
+flake8 = "^4.0.1"
+flake8-bandit = "^2.1.2"
+flake8-bugbear = "^22.1.11"
+flake8-docstrings = "^1.6.0"
+pre-commit = "^2.18.1"
+pre-commit-hooks = "^4.1.0"
+pylint = "^2.12.2"
+pytest = "^7.0.1"
+pytest-cases = "^3.6.9"
 pytest-cov = "^3.0.0"
 pytest-mock = "^3.7.0"
-flake8-docstrings = "^1.6.0"
-flake8-bandit = "^2.1.2"
-bandit = "1.7.2"
-pyupgrade = "^2.31.0"
-coveralls = "^3.3.1"
-pytest-cases = "^3.6.9"
-flake8-bugbear = "^22.1.11"
-darglint = "^1.8.1"
-pytest-randomly = "^3.11.0"
-pylint = "^2.12.2"
 pytest-pycodestyle = "^2.3.0"
-pre-commit = "^2.18.1"
-
+pytest-randomly = "^3.11.0"
+pyupgrade = "^2.31.0"
+reorder-python-imports = "^2.7.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
@@ -73,17 +63,6 @@ line-length = 99
 target-version = ['py39', 'py310']
 preview = true
 
-[tool.mypy]
-strict = true
-warn_unreachable = true
-pretty = true
-show_column_numbers = true
-show_error_codes = true
-show_error_context = true
-ignore_missing_imports = true
-
-[tool.darglint]
-ignore = ["DAR402", "DAR103"]
 
 ## COVERAGE ##
 
@@ -129,8 +108,3 @@ filterwarnings = [
     "ignore::PendingDeprecationWarning",
 ]
 norecursedirs = ["tests/utils"]
-
-
-## TOX ##
-# Currently there is no native support. When it is available, it would be best to consolidiate
-# another file (in this case the tox.ini file) into the pyproject.toml
