isort pre-commit test

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ flake8 = "^4.0.1"
 flake8-bandit = "^2.1.2"
 flake8-bugbear = "^22.1.11"
 flake8-docstrings = "^1.6.0"
+isort = "^5.10.1"
 pre-commit = "^2.18.1"
 pre-commit-hooks = "^4.1.0"
 pylint = "^2.12.2"
