--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -61,4 +61,13 @@ repos:
     hooks:
       - id: isort
         name: isort (python)
-        args: ["--profile", "black", "-l", "99", "multi_line_output", "3", "."]
+        args:
+          [
+            "--profile",
+            "black",
+            "-l",
+            "99",
+            "multi_line_output",
+            "3",
+            "src/tmi",
+          ]
