--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,7 +3,7 @@ repos:
     rev: 5.10.1
     hooks:
       - id: isort
-        name: isort (python)
+        name: Formatting - isort
         args:
           [
             "--profile",
@@ -55,12 +55,6 @@ repos:
         language: system
         types: [python]
         args: [--py37-plus]
-      # - id: reorder-python-imports
-      #   name: Reorder python imports
-      #   entry: reorder-python-imports
-      #   language: system
-      #   types: [python]
-      #   args: [--application-directories=src]
       - id: trailing-whitespace
         name: Trim Trailing Whitespace
         entry: trailing-whitespace-fixer
@@ -68,6 +62,6 @@ repos:
         types: [text]
         stages: [commit, push, manual]
   - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: v2.4.1
+    rev: v2.6.2
     hooks:
       - id: prettier
