--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 language: python
 python:
-  - 3.9
-  - 3.10
+  - 3.7
 git:
   depth: false
 
@@ -21,14 +20,15 @@ env:
     # Set Matplotlib backend to Agg (Non-interactive, only writes to files)
     - MPLBACKEND=Agg
 
-# Installs poetry, pre-commit, tox, tox-travis
+# Installs poetry, pre-commit, coveralls
 before_install:
   - curl -sSL https://install.python-poetry.org | python3 -
   - poetry --version
-  - pip install coveralls
   - pip install pre-commit
+  - pip install coveralls
 
-# Installs all packages needed for tmi in a virtual environment
+# Installs all packages needed for tmi in a virtual environment.
+# Installs the hooks for checking formatting.
 install:
   - poetry install
   - pre-commit install-hooks
@@ -39,8 +39,9 @@ script: poetry run pytest
 
 jobs:
   include:
+    # We can change the python build version here to whatever we decide on.
     - stage: build
-      python: 3.10
+      python: 3.7
       script: poetry build
 
 after_success:
